--- a/static/style.css
+++ b/static/style.css
@@ -17,6 +17,11 @@ h1 {
   font-size: 2.3em;
 }
 
+a {
+  color: #B30066;
+  text-decoration: none;
+}
+
 .container {
   max-width: 50em;
   margin: 0 auto;
