--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% for article in articles %}
   <div class="article">
     <h2 class="article-title"><a href="/{{ article.key().id() }}">{{ article.title }}</a></h2>
-    <p class="article-text">{{ article.text}}</p>
+    <p class="article-text">{{ article.text | safe }}</p>
   </div>
 
   <hr>
