--- a/templates/show.html
+++ b/templates/show.html
@@ -4,7 +4,7 @@
 
   <div class="article">
     <h2 class="article-title">{{ article.title }}</h2>
-    <p class="article-text">{{ article.text }}</p>
+    <p class="article-text">{{ article.text | safe }}</p>
   </div>
 
 {% endblock %}
