Restructure page html and style

--- a/templates/show.html
+++ b/templates/show.html
@@ -2,9 +2,13 @@
 
 {% block content %}
 
-  <div class="article">
-    <h2 class="article-title">{{ article.title }}</h2>
-    <p class="article-text">{{ article.text | safe }}</p>
+<article class="article">
+  <div class="article-title">
+    <h2>{{ article.title }}</h2>
   </div>
+  <div class="article-text">
+    <p>{{ article.text | safe }}</p>
+  </div>
+</article>
 
 {% endblock %}
