--- a/static/style.css
+++ b/static/style.css
@@ -17,14 +17,22 @@ h1 {
   font-size: 2.3em;
 }
 
+p {
+  margin: 1em 0;
+  font-size: 1.2em;
+}
+
 a {
   color: #B30066;
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 .container {
-  max-width: 50em;
-  margin: 0 auto;
+  max-width: 60em;
 }
 
 .signin-alert, .signup-alert {
