--- a/templates/base.html
+++ b/templates/base.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>kblog</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300&amp;subset=latin-ext" rel="stylesheet">
+   <link rel="stylesheet" href="static/bootstrap.css">
     <link rel="stylesheet" href="static/style.css">
   </head>
 
   <body>
     <div class="container">
       <header>
-        <h1>{ kblog }</h1>
+        <h1><a href="/">{ kblog }</a></h1>
       </header>
 
       {% block content %}
