--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,19 @@
 {% block content %}
 
 {% for article in articles %}
-  <div class="article">
-    <h2 class="article-title"><a href="/{{ article.key().id() }}">{{ article.title }}</a></h2>
-    <p class="article-text">{{ article.text | safe }}</p>
+<div class="article">
+  <div class="article-title">
+    <h2><a href="/{{ article.key().id() }}">{{ article.title }}</a></h2>
   </div>
+  <div class="article-time">
+    {{ article.created.strftime("%b %d, %Y") }}
+  </div>
+  <div class="article-text">
+    <p>{{ article.text | safe }}</p>
+  </div>
+</div>
 
-  <hr>
+<hr>
 {% endfor %}
 
 {% endblock %}
