--- a/static/style.css
+++ b/static/style.css
@@ -3,31 +3,57 @@ body {
   font-weight: 300;
 }
 
+/*
+ * Header
+ *
+ */
+
+header {
+  background-color: #fff9f9;
+}
+
+.site-title {
+  margin: 0;
+  padding: 5em 0;
+}
+
+h1 {
+  color: #FE4365;
+  margin: 0 auto;
+  text-align: center;
+  font-weight: 300;
+  font-size: 3em;
+}
+
+h2 {
+  color: #FE4365;
+  font-weight: 300;
+}
+
+/*
+ * Main
+ *
+ */
+
 main {
   max-width: 30em;
   margin: 2em auto 0 auto;
 }
 
-h1 {
-  margin: 0;
-  padding: 1em 0 0 0;
-  text-align: right;
-  color: #B30066;
-  font-weight: 300;
-  font-size: 2.3em;
-}
-
 p {
   margin: 1em 0;
-  font-size: 1.2em;
+  font-size: 1.3em;
+  line-height: 1.8em;
+  color: #303030;
 }
 
 a {
-  color: #B30066;
+  color: #FE4365;
   text-decoration: none;
 }
 
 a:hover {
+  color: #FC9D9A;
   text-decoration: none;
 }
 
@@ -45,13 +71,18 @@ a:hover {
 
 input, textarea {
   width: 100%;
-  min-height: 40px;
+  line-height: 2.2em;
   padding: 0 0.7em;
   font-family: 'Lato', sans-serif;
-  font-size: 1em;
+  font-size: 1.2em;
   font-weight: 100;
 }
 
 textarea {
   min-height: 200px;
+}
+
+.article-time {
+  color: #83AF9B;
+  font-weight: 600;
 }
