--- a/templates/new.html
+++ b/templates/new.html
@@ -4,14 +4,14 @@
 
 <form method="post">
   <label>
-    <div>Title</div>
+    <p>Title</p>
     <input  type="text" name="title" value="{{ title }}">
   </label>
 
   <br>
 
   <label>
-    <div>Text</div>
+    <p>Text</p>
     <textarea name="text">{{text}}</textarea>
   </label>
 
