--- a/templates/index.html
+++ b/templates/index.html
@@ -2,20 +2,28 @@
 
 {% block content %}
 
-{% for article in articles %}
-<div class="article">
-  <div class="article-title">
-    <h2><a href="/{{ article.key().id() }}">{{ article.title }}</a></h2>
-  </div>
-  <div class="article-time">
-    {{ article.created.strftime("%b %d, %Y") }}
-  </div>
-  <div class="article-text">
-    <p>{{ article.text | safe }}</p>
-  </div>
-</div>
+{% if articles.count() == 0 %}
 
-<hr>
-{% endfor %}
+  <p>No posts yet, write something << <a href="/new">here</a> >>. </p>
+
+{% else %}
+
+  {% for article in articles %}
+    <div class="article">
+      <div class="article-title">
+        <h2><a href="/{{ article.key().id() }}">{{ article.title }}</a></h2>
+      </div>
+      <div class="article-time">
+        {{ article.created.strftime("%b %d, %Y") }}
+      </div>
+      <div class="article-text">
+        <p>{{ article.text | safe }}</p>
+      </div>
+    </div>
+
+    <hr>
+  {% endfor %}
+
+{% endif %}
 
 {% endblock %}
