--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,18 @@
   </head>
 
   <body>
-    <header class="site-title">
-      <h1><a href="/">{ kblog }</a></h1>
+    <header class="row">
+      <div class="wrapper">
+        <div class="col-md-4 site-title">
+          <h1><a href="/">{kblog}</a></h1>
+        </div>
+        <nav class="col-md-8 home-nav">
+          <ul>
+            <li><a href="/signup">sign up</a></li>
+            <li><a href="/signin">sign in</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main class="container">
